<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.naufal.latihanspnj_02.Sign">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/miuies_logo" />

    <TextView
        android:id="@+id/tulisan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tulisan"
        android:background="@drawable/rounded_btn"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sigin"
        android:background="@drawable/rounded_btn1"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        />

</RelativeLayout>
